--- a/frontend/src/app/layout/sidebar/sidebar.html
+++ b/frontend/src/app/layout/sidebar/sidebar.html
@@ -44,9 +44,14 @@
         <span *ngIf="!collapsed">Route Binding</span>
     </li>
 
-     <li nz-menu-item routerLink="/sub-branch-assignment-definition" routerLinkActive="nz-menu-item-selected">
-        <i class="fas fa-link me-2"></i>
+    <li nz-menu-item routerLink="/sub-branch-assignment-definition" routerLinkActive="nz-menu-item-selected">
+        <i class="fas fa-sitemap me-2"></i>
         <span *ngIf="!collapsed">Sub Branch Assignment Definition</span>
+    </li>
+
+    <li nz-menu-item routerLink="/CNC-Form" routerLinkActive="nz-menu-item-selected">
+        <i class="fas fa-file-alt me-2"></i>
+        <span *ngIf="!collapsed">CNC-Form</span>
     </li>
 
 </ul>
