--- a/frontend/src/app/layout/sidebar/sidebar.html
+++ b/frontend/src/app/layout/sidebar/sidebar.html
@@ -71,6 +71,11 @@
                 <i class="fas fa-layer-group me-2"></i>
                 <span *ngIf="!collapsed">CNC L4 Definition</span>
             </li>
+
+            <li nz-menu-item routerLink="/cnc-Level5" routerLinkActive="nz-menu-item-selected">
+                <i class="fas fa-layer-group me-2"></i>
+                <span *ngIf="!collapsed">CNC L5 Definition</span>
+            </li>
         </ul>
     </li>
 
