--- a/frontend/src/app/layout/sidebar/sidebar.html
+++ b/frontend/src/app/layout/sidebar/sidebar.html
@@ -76,6 +76,11 @@
                 <i class="fas fa-layer-group me-2"></i>
                 <span *ngIf="!collapsed">CNC L5 Definition</span>
             </li>
+
+             <li nz-menu-item routerLink="/cnc-Level6" routerLinkActive="nz-menu-item-selected">
+                <i class="fas fa-layer-group me-2"></i>
+                <span *ngIf="!collapsed">CNC L6 Definition</span>
+            </li>
         </ul>
     </li>
 
