--- a/frontend/src/app/features/sub-branch-definition/sub-branch-definition.html
+++ b/frontend/src/app/features/sub-branch-definition/sub-branch-definition.html
@@ -5,7 +5,7 @@
 
         <button nz-button nzType="primary" class="nz-button-primary p-1" (click)="openAddForm()">
             <i class="fa fa-plus me-2"></i>
-            Add Sub-Branch
+            Add Sub-Branch Binding
         </button>
     </div>
 
